fixed wave contrast errors

--- a/front/src/styles/LobbyCreation.css
+++ b/front/src/styles/LobbyCreation.css
@@ -50,6 +50,7 @@
 
 span {
     margin-right: 3px;
+    color: #5c5b5b;
     margin-left: 3px;
 }
 
@@ -127,7 +128,7 @@ span:nth-child(11):hover {
     color: #9afa66;
     transform: translate(0px, -10px);
     display: inline-block;
-    transition: all 0.01s ease-in-out;
+    transition: all 0.03s ease-in-out;
 }
 
 #copyId {
@@ -139,7 +140,7 @@ span:nth-child(11):hover {
     font-size: 15px;
     color: #031e2e;
     opacity: 0.0;
-    transition: all 2s;
+    transition: all 0.05 ease-in-out;
 }
 
 #copyId:hover p {
